spring-boot-app-manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-hay
  labels:
    app: spring-hay
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-hay
  template:
    metadata:
      labels:
        app: spring-hay
    spec:
      containers:
      - name: spring-hay
        image: haydevops/hay2665:3
        ports:
        - containerPort: 80
