spring-boot-app-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-boot-app-service
spec:
  type: LoadBalancer 
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: spring-hay
