spring-boot-app-manifests/servicenew.yml
apiVersion: v1
kind: Service
metadata:
  name: hayhay
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: spring-boot-app
