spring-boot-app-manifests/ingress-ressource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  rules:
  - host: "devopstn.com"
    http:
      paths:
      - path: /haykel
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
