spring-boot-app-manifests/ingress-ressource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-hay
  namespace: haykel
  annotations:
        haproxy.org/path-rewrite: "/"
spec:
  
  rules:
  - host: devopstn.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-boot-app-service
            port:
              number: 80
